nesc-frontend/src/test/resources/integration/programs/bad/bad02/C.nc
/* Nested tag redefinition. */

struct s
{
   int i;

   struct s
   {
      char c;
   };
};

configuration C
{
}
implementation
{
}
